--- a/ds.css
+++ b/ds.css
@@ -344,7 +344,12 @@ ul.team-content li .pic img:hover { filter: url("data:image/svg+xml;utf8,<svg xm
 #Partners .cs_right a	{text-decoration:none;}
 
 
-h3.hd				{color:#000; padding:0.6em 0 0.4em 0; text-transform:uppercase; font-size:1.8em; line-height:1.3em; text-align:center; width:100%; background:#e1e1e1; float:left}
+h3.hd				  {color:#000; padding:0.6em 0 0.4em 0; text-transform:uppercase; font-size:1.8em; line-height:1.3em; text-align:center; width:100%; background:#e1e1e1; float:left}
+
+h3.hd1				{color:#000; padding:0.6em 0 0.4em 0; text-transform:uppercase; font-size:1.8em; line-height:1.3em; text-align:center; width:100%; background: #3d8884; float:left}
+
+h3.hd2  			{color:#000; padding:0.6em 0 0.4em 0; text-transform:uppercase; font-size:1.8em; line-height:1.3em; text-align:center; width:100%; background: #eab149; float:left}
+
 
 /*========== Clients logo ==========*/
 #sponsorship ul.clients_logo		{padding:.5em 0 0em 0; margin:0; text-align:left; display:block; float:left; width:100%;}
