--- a/ds.css
+++ b/ds.css
@@ -344,6 +344,12 @@ h3.hd1				{color:#000; padding:0.6em 0 0.4em 0; text-transform:uppercase; font-s
 
 h3.hd2  			{color:#000; padding:0.6em 0 0.4em 0; text-transform:uppercase; font-size:1.8em; line-height:1.3em; text-align:center; width:100%; background: #eab149; float:left}
 
+h3.hd3   			{color:#000; padding:0.6em 0 0.4em 0; text-transform:uppercase; font-size:1.8em; line-height:1.3em; text-align:center; width:100%; background: #a0f081; float:left}
+
+h3.hd4   			{color:#000; padding:0.6em 0 0.4em 0; text-transform:uppercase; font-size:1.8em; line-height:1.3em; text-align:center; width:100%; background: #71e8cc; float:left}
+
+h3.hd5   			{color:#000; padding:0.6em 0 0.4em 0; text-transform:uppercase; font-size:1.8em; line-height:1.3em; text-align:center; width:100%; background:#6fa8dc; float:left}
+
 
 /*========== Clients logo ==========*/
 #sponsorship ul.clients_logo		{padding:.5em 0 0em 0; margin:0; text-align:left; display:block; float:left; width:100%;}
