--- a/ds.css
+++ b/ds.css
@@ -184,7 +184,7 @@ TALENT PANEL
 #Talent { display:block; padding:0; margin:0; clear:both}
 
 /*========== Talent ==========*/
-ul.talent_list { padding:2em 0 0em 0; margin:0; text-align:center; display:block; float:left;}
+ul.talent_list { padding:2em 0 0em 0; margin:0; text-align:center; display:block; float:center;}
 ul.talent_list li { padding:0; margin:0em 0 4em 0; list-style:none; display:inline-block; text-align:center; width:24%; vertical-align:top;}
 ul.talent_list h2 { color:#333; padding:0.3em 0 0.3em 0; text-transform:none; line-height:1.3em; letter-spacing:0em;}
 ul.talent_list h3 { color:#666; padding:0em 0 0.4em 0; text-transform:none; font-size:1.2em; line-height:1.3em; }
@@ -209,6 +209,8 @@ ul.talent_list a:hover .icon-more {  width:30px; height:30px; background: url(im
 .pic-brands { width:100%; display:block; text-align:center; }
   
 .pic-brands img{border-radius: 2%;}
+
+#event-management ul li{margin: 10px 0 5px 0;}
 	
 #talent_wrapper {  width:100%;   display:table; clear:both; }	
 #talent_wrapper .talent_left {  width:45%; padding-right:5%;  display:table-cell;   vertical-align:top;}	
